--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url /crat/" ,
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "server": "npx json-server student.json"
